Removing unnecessary environments in LaTeX template and adding some commands
--danwang

--- a/templates/hkn_review_questions_template.tex
+++ b/templates/hkn_review_questions_template.tex
@@ -1,9 +1,15 @@
 \documentclass[10pt]{article}
 
-% Variables
-\newcommand{\thedate}{SEMESTER\_CREATED}
-\newcommand{\assignment}{CLASS\_NAME}
+% Fill in variables below %
+% ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ %
+\newcommand{\semestercreated}{SemesterCreated}
+\newcommand{\classname}{ClassName}
+\newcommand{\topic}{Topic - Subtopic}
+\newcommand{\questionauthor}{Author}
+% ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ %
 
+% Ignore Preamble %
+% ---------------------------------------------------------------------------- %
 % Formatting packages
 \usepackage{palatino}
 \usepackage{fullpage}
@@ -22,34 +28,19 @@
 \setlength{\headheight}{20pt}
 
 % Header
-\rhead{\textsc{\thedate}}
-\chead{\Large \textsc{\assignment}}
-\lhead{\textsc{CLASS\_NAME}}
+\rhead{\textsc{\topic}}
+\lhead{\textsc{\classname}}
 \cfoot{\large\thepage}
+\rfoot{\em{\questionauthor - \semestercreated}}
+% ---------------------------------------------------------------------------- %
 
-% Numbered environments
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{proposition}[theorem]{Proposition}
-\newtheorem{corollary}[theorem]{Corollary}
-
-% Unnumbered environments
-\newenvironment{proof}[1][Proof]{\begin{trivlist}
-  \item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
-\newenvironment{definition}[1][Definition]{\begin{trivlist}
-  \item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
-\newenvironment{example}[1][Example]{\begin{trivlist}
-  \item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
-\newenvironment{remark}[1][Remark]{\begin{trivlist}
-  \item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
-
-% QED Symbol
-\newcommand{\qed}{\nobreak \ifvmode \relax \else
-  \ifdim\lastskip<1.5em \hskip-\lastskip
-  \hskip1.5em plus0em minus0.5em \fi \nobreak
-  \vrule height0.75em width0.5em depth0.25em\fi}
-
-% Start of document
 \begin{document}
-asdf
+% START DOCUMENT %
+% ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ %
+% Guidelines:
+%  * When using numbered environments (e.g., lists), use \begin{enumerate} and
+%    \end{enumerate}
+%  * Keep line width at most 80 characters
+% ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ %
 \end{document}
+
