Added a checkbox to the bottom of the permission form
--danwang

--- a/general/permission-form.tex
+++ b/general/permission-form.tex
@@ -83,13 +83,17 @@ following exams on https://hkn.eecs.berkeley.edu/:
   \vspace{2em}
   \underline{\hspace{7em}} & \underline{\hspace{7em}} &
   \underline{\hspace{15em}} & \underline{\hspace{15em}} \\
-
-  \vspace{2em}
-  \underline{\hspace{7em}} & \underline{\hspace{7em}} &
-  \underline{\hspace{15em}} & \underline{\hspace{15em}} \\
-
-
 \end{tabular}
+
+{\huge $\Box$} I allow HKN, Mu Chapter to use all exams.
+
+\vspace{3em}
+
+\begin{tabular}{ll}
+  \underline{\hspace{20em}} & \underline{\hspace{15em}} \\
+  Signature & Date
+\end{tabular}
+
 
 \end{document}
 
