--- a/cs70/sp13/cs70-mt1-sp13-review.tex
+++ b/cs70/sp13/cs70-mt1-sp13-review.tex
@@ -5,8 +5,8 @@
 % Fill in variables below %
 % ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ %
 \newcommand{\thesemester}{Spring 2013}
-\newcommand{\themidterm}{CS 70 Midterm 1 Review}
-\newcommand{\theauthors}{Edwin Liao, Sung Roa Yoon}
+\newcommand{\themidterm}{CS70 Midterm 1 Review}
+\newcommand{\theauthors}{Alton Zheng, Edwin Liao, Joy Jeng, Sagar Karandikar, Sung Roa Yoon}
 \newcommand{\theorganization}{Eta Kappa Nu, Mu Chapter \\
 University of California, Berkeley}
 \newcommand{\thedate}{February 18, 2013}
