Started adding questions to induction section (testing merge)

--- a/cs70/sp13/cs70-mt1-sp13-review.tex
+++ b/cs70/sp13/cs70-mt1-sp13-review.tex
@@ -87,7 +87,8 @@ p(x) &=& 0 \cdot \delta_1 + 1 \cdot \delta_2 + 0 \cdot \delta_3 = -x^2 + 4x -3 =
 \subsection{Induction}
 
 \begin{frame}[fragile]
-  \frametitle{Graphs}
+  \frametitle{Example 1}
+  Prove $\sum\limits_{i=1}^n i^2 = \frac{n(n+1)(2n+1)}{6}$
 \end{frame}
 
 
